--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "frontend-project-lvl2",
   "version": "1.0.0",
   "description": "![Actions Status](https://github.com/vchslv/frontend-project-lvl2/workflows/hexlet-check/badge.svg)",
+  "bin": {
+    "gendiff": "bin/index.js"
+  },
+  "engines": {
+    "node": ">=14"
+  },
   "main": "./lib/gendiff.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx -n --experimental-vm-modules jest"
   },
   "repository": {
     "type": "git",
@@ -15,15 +21,22 @@
   "bugs": {
     "url": "https://github.com/vchslv/frontend-project-lvl2/issues"
   },
+  "type": "module",
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {}
+  },
   "homepage": "https://github.com/vchslv/frontend-project-lvl2#readme",
   "dependencies": {
-    "commander": "^6.1.0",
-    "eslint": "^7.10.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.1"
+    "commander": "^6.1.0"
   },
-  "type": "module",
-  "bin": {
-    "gendiff": "bin/index.js"
+  "devDependencies": {
+    "@jest/globals": "^26.5.3",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
+    "jest": "^26.5.3",
+    "jest-cli": "^26.5.3"
   }
 }
