adding run test on Githab Actions

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -33,3 +33,7 @@ jobs:
         # Run Linter
         run: |
           make lint
+      - name: Run test
+        # Run Jest
+        run: |
+          make test
