--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "homepage": "https://github.com/vchslv/frontend-project-lvl2#readme",
   "dependencies": {
-    "commander": "^6.1.0"
+    "commander": "^6.1.0",
+    "js-yaml": "^3.14.0"
   },
   "devDependencies": {
     "@jest/globals": "^26.5.3",
