--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/vchslv/frontend-project-lvl2#readme",
   "dependencies": {
     "commander": "^6.1.0",
+    "ini": "^1.3.5",
     "js-yaml": "^3.14.0"
   },
   "devDependencies": {
