--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "commander": "^6.1.0",
     "ini": "^1.3.5",
-    "js-yaml": "^3.14.0"
+    "js-yaml": "^3.14.0",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@jest/globals": "^26.5.3",
