--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "frontend-project-lvl2",
+  "name": "@vchslv/gendiff",
   "version": "1.0.0",
-  "description": "![Actions Status](https://github.com/vchslv/frontend-project-lvl2/workflows/hexlet-check/badge.svg)",
+  "description": "Generator of difference",
   "bin": {
-    "gendiff": "bin/index.js"
+    "gendiff": "bin/gendiff.js"
   },
   "engines": {
     "node": ">=14"
   },
-  "main": "./lib/gendiff.js",
+  "main": "./index.js",
   "scripts": {
     "test": "npx -n --experimental-vm-modules jest"
   },
@@ -29,7 +29,6 @@
   "homepage": "https://github.com/vchslv/frontend-project-lvl2#readme",
   "dependencies": {
     "commander": "^6.1.0",
-    "ini": "^1.3.5",
     "js-yaml": "^3.14.0",
     "lodash": "^4.17.20"
   },
